# claude-care-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEBUG_TRIAGE.md  LICENSE  README.md  ROADMAP.md  alembic.ini  care_orchestrator.db  claude.json  master_prompt.md  pyproject.toml  pyrightconfig.json
.agent/workflows/: sprint-close.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_pa_records.py  0002_add_payer_configs.py
config/: regulatory_guardrails.xml
config/policies/: commercial_generic.json  medicaid.json  medicare.json
scripts/: compliance_audit.py
src/care_orchestrator/: __init__.py  app.py  appeal_generator.py  cms_mcp_client.py  compliance_engine.py  config.py  database.py  fhir_bundle.py  fhir_mapper.py  fhir_schemas.py  fhir_validator.py  logging_config.py  mcp_server.py  medical_necessity.py  models.py  models_db.py  patient_access.py  phi_detector.py  policy_engine.py  prior_auth.py  rcm_orchestrator.py  regulatory_dashboard.py  smart_auth.py
src/care_orchestrator/agents/: __init__.py  claims_agent.py  coding_agent.py  eligibility_agent.py  prior_auth_agent.py  registry.py
src/care_orchestrator/ehr/: __init__.py  base.py  epic.py  intersystems.py  oracle_health.py  registry.py  veradigm.py
src/care_orchestrator/seeds/: generate_synthetic_pa.py  load_payer_configs.py
tests/: conftest.py  test_agents.py  test_alembic.py  test_api.py  test_appeal_generator.py  test_claims_agent.py  test_cms_mcp_client.py  test_coding_agent.py  test_compliance_engine.py  test_database.py  test_ehr_adapters.py  test_eligibility_agent.py  test_fhir_mapper.py  test_fhir_validator.py  test_medical_necessity.py  test_models.py  test_patient_access.py  test_payer_config_db.py  test_phi_detector.py  test_policy_engine.py  test_prior_auth.py  test_rcm_orchestrator.py  test_regulatory_dashboard.py  test_smart_auth.py
